# mlibc

./: meson.build  meson_options.txt
options/ansi/generic/: file-io.cpp  stdio-stubs.cpp
options/elf/generic/: startup.cpp
options/posix/generic/: posix_stdlib.cpp  sys-mman-stubs.cpp  sys-uio.cpp  unistd-stubs.cpp
options/posix/musl-generic/: glob.cpp
options/rtdl/generic/: linker.hpp
sysdeps/evilforestk/: meson.build
sysdeps/evilforestk/crt-x86_64/: crt1.S
sysdeps/evilforestk/generic/: entry.cpp  generic.cpp
